--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"name": "startup-template",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -34,6 +33,9 @@
 		"vite": "^5.0.3"
 	},
 	"type": "module",
+	"engines": {
+		"node": ">=18.18.0"
+	},
 	"dependencies": {
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
