--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"node": ">=18.18.0"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^4.9.0",
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"lenis": "^1.1.8",
