--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.15.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.19",
@@ -43,6 +43,7 @@
 		"lenis": "^1.1.8",
 		"lucide-svelte": "^0.416.0",
 		"mode-watcher": "^0.4.0",
+		"npm": "^11.0.0",
 		"svelte-inview": "^4.0.2",
 		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^0.3.27",
